--- a/app/app.html
+++ b/app/app.html
@@ -9,7 +9,7 @@
     <script src="helpers/context_menu.js"></script>
     <script src="helpers/external_links.js"></script>
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
 </head>
 <body>
 
